--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.691.0",
     "aws-cdk-lib": "2.166.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
