--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -20,15 +20,15 @@
     "source-map-support": "0.5.21"
   },
   "devDependencies": {
-    "@types/aws-lambda": "8.10.125",
-    "@types/node": "18.11.2",
-    "@types/jest": "29.5.6",
-    "@aws-sdk/client-secrets-manager": "3.445.0",
-    "@aws-sdk/client-dynamodb": "3.445.0",
-    "@aws-sdk/lib-dynamodb": "3.445.0",
-    "@aws-sdk/node-http-handler": "3.374.0",
-    "@aws-sdk/util-dynamodb": "3.445.0",
-    "@aws-sdk/client-ssm": "3.445.0",
+    "@types/aws-lambda": "^8.10.145",
+    "@types/node": "^22.9.0",
+    "@types/jest": "^29.5.14",
+    "@aws-sdk/client-secrets-manager": "^3.693.0",
+    "@aws-sdk/client-dynamodb": "^3.693.0",
+    "@aws-sdk/lib-dynamodb": "^3.693.0",
+    "@aws-sdk/node-http-handler": "^3.374.0",
+    "@aws-sdk/util-dynamodb": "^3.693.0",
+    "@aws-sdk/client-ssm": "^3.693.0",
     "typescript": "4.8.4",    
     "jest": "29.7.0",
     "ts-jest": "29.1.1"
