--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/client-secrets-manager": "3.438.0",    
     "jest": "29.7.0",
     "ts-jest": "29.1.1",
+    "ts-loader": "9.5.0",
     "typescript": "4.8.4"
   }
 }
