--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "packages/auth"    
   ],
   "scripts": {
-    "build": "npm run build-packages && tsc",
-    "build-packages": "npm run build -w bumblebee-common && npm run build -w bumblebee-services",
+    "build": "/bin/bash ./scripts/build/build.sh",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
@@ -25,7 +24,8 @@
     "ts-jest": "^29.2.5",
     "aws-cdk": "2.166.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.6.3",
+    "esbuild": "^0.24.0"
   },
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.691.0",
